--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_auth: ^3.11.2
   cloud_firestore: ^3.5.1
   google_sign_in: ^5.4.2
+  firebase_messaging: ^13.1.0
+  flutter_local_notifications: ^12.0.2
 
 dev_dependencies:
   flutter_test:
